added target run-tests-sm to run the tests with security manager ON